cmake_minimum_required(VERSION 3.25)
project(clion)

set(CMAKE_CXX_STANDARD 17)

#add_executable(clion BOJ_12764.cpp)
#add_executable(clion BOJ_18116.cpp)
#add_executable(clion Prog_요격_시스템.cpp)
#add_executable(clion Prog_미로탈출명령어.cpp)
#add_executable(clion BOJ_16985.cpp)
#add_executable(clion note.cpp)
add_executable(clion BOJ_1285.cpp)

